crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/yul_function/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
    ╭─[input.sol:11:22]
    │
 11 │             function g(a) -> v {
    │                      ┬  
    │                      ╰── Error occurred here.
────╯
